src/tailwind.css
@import 'tailwindcss';
@import 'tailwind-scrollbar-hide/v4';

@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

@layer base {
  html,
  body {
    @apply bg-zinc-50 text-zinc-900 dark:bg-zinc-900 dark:text-zinc-50;
  }

  @media (max-width: 1023px) {
    * {
      @apply scrollbar-hide;
    }
  }
}

@theme {
  --animate-fade-in: fade-in 0.15s ease-in-out;
  --animate-fade-out: fade-out 0.2s ease-in-out;
  --animate-fade-up: fade-up 0.3s ease-in-out;
  --animate-fade-down: fade-down 0.2s ease-in-out;
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fade-out {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes fade-up {
  0% {
    opacity: 0;
    transform: translateY(48px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes fade-down {
  0% {
    opacity: 1;
    transform: translateY(0);
  }
  100% {
    opacity: 0;
    transform: translateY(48px);
  }
}

@keyframes shimmer {
  0% {
    transform: translateX(-100%);
  }
  50% {
    transform: translateX(50%);
  }
  100% {
    transform: translateX(200%);
  }
}

@keyframes spin {
  0% {
    transform: rotate(0);
  }
  100% {
    transform: rotate(360deg);
  }
}

